<resources>
    <string name="app_name">android-project</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_signin">Sign in</string>
    <string name="login_signup">Sign up.</string>
    <string name="login_no_account">Don\'t have an account yet?</string>
    <string name="login_error_database">Error connecting to database.</string>
    <string name="login_error_account">This account does not exist.</string>
    <string name="login_incorrect_password">Incorrect password.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_username">username</string>
    <string name="signup_email">e-mail</string>
    <string name="signup_password">password</string>
    <string name="signup_create">Create new account</string>
    <string name="signup_account_created">Account created successfully.</string>
    <string name="signup_account_failed">Invalid data.</string>
    <string name="default_text">default</string>
    <string name="attraction_view_maps">View in maps</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_account">Account</string>
    <string name="nav_visited">Visited</string>
    <string name="placeholder_username">placeholder_username</string>
    <string name="placeholder_email">placeholder_email</string>
    <string name="account_credits">Project created by Vladescu Alexandra–Bianca and Stefan Codruta-Ilinca @ 2020-2021</string>
    <string name="account_notifications">Notifications</string>
    <string name="account_theme">Theme</string>
    <string name="account_logout">Log out</string>
    <string name="signup_signup">Sign up!</string>
    <string name="login_txt2">Sign in to continue!</string>
    <string name="login_txt1">Welcome,</string>
    <string name="signup_txt1">No account?</string>
    <string name="signup_txt2">Sign up to get started!</string>
    <string name="add_a_new_visit_textview">Add a new visit</string>
    <string name="add_new_visit_button">Add</string>
    <string name="visited_edit">Edit</string>
    <string name="visited_delete">Delete</string>
    <string name="add_visit_save">SAVE</string>
    <string name="default_cost">0.00$</string>
    <string name="visited_amount">%1$d €</string>
    <string name="add_visited_spending">How much money did you spend?</string>
    <string name="nav_statistics">Statistics</string>
    <string name="statistics_ratings">Statistics: Ratings</string>
    <string name="statistics_spendings">Statistics: Spendings</string>
    <string name="report_title">Report</string>
    <string name="report_title_ratings">Ratings</string>
    <string name="report_title_spendings">Spendings</string>
    <string name="report_rating_min">The lowest rating you gave: %1$d</string>
    <string name="report_rating_max">The highest rating you gave: %1$d</string>
    <string name="report_rating_avg">The average rating you gave: %1$d</string>
    <string name="report_spending_min">The lowest amount you spent: %1$.2f</string>
    <string name="report_spending_max">The highest amount you spent: %1$.2f</string>
    <string name="report_spending_avg">The average amount you spent: %1$.2f</string>
    <string name="report_spending_total">The total amount you spent: %1$.2f</string>
    <string name="nav_report">Report</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
    <string name="application_name">theTraveler</string>
    <string name="statistics_no_visits">You have no visits.</string>
    <string name="report_no_visits">You have no visits!</string>
    <string name="statistics_minimum_three_visits">You need at least 3 visits for this graph!</string>
    <string name="statistics_not_enough_visits">You don\'t have enough visits.</string>
    <string name="username_not_long_enough">Username not long enough.</string>
    <string name="password_not_long_enough">Password not long enough.</string>
</resources>