<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    tools:context=".ReportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/report_title"
            style="@style/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_title" />

        <TextView
            android:id="@+id/report_title_ratings"
            style="@style/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_title_ratings" />

        <TextView
            android:id="@+id/report_ratings_min"
            style="@style/report_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_rating_min" />

        <TextView
            android:id="@+id/report_ratings_max"
            style="@style/report_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_rating_max" />

        <TextView
            android:id="@+id/report_ratings_avg"
            style="@style/report_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_rating_avg" />

        <TextView
            android:id="@+id/report_title_spendings"
            style="@style/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_title_spendings" />


        <TextView
            android:id="@+id/report_spendings_min"
            style="@style/report_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_spending_min" />

        <TextView
            android:id="@+id/report_spendings_max"
            style="@style/report_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_spending_max" />

        <TextView
            android:id="@+id/report_spendings_avg"
            style="@style/report_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_spending_avg" />

        <TextView
            android:id="@+id/report_spendings_total"
            style="@style/report_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_spending_total" />

    </LinearLayout>
</ScrollView>
