<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_face_24"
            android:title="@string/nav_account" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@android:drawable/star_big_on"
            android:title="Favorites" />
        <item
            android:id="@+id/nav_visited"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/nav_visited" />
    </group>
</menu>