<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="50dp"
            android:paddingBottom="10sp">


            <TextView
                android:id="@+id/account_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_username" />

            <TextView
                android:id="@+id/account_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_email" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/account_credits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_column="1"
                android:text="@string/account_notifications"
                android:padding="5dp" />
            <Switch
                android:id="@+id/switch_notifications"
                android:gravity="right"
                android:padding="5dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_column="1"
                android:text="@string/account_theme"
                android:padding="5dp" />
            <Switch
                android:id="@+id/switch_theme"
                android:gravity="right"
                android:padding="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/account_logout"
                android:layout_column="1"
                android:text="@string/account_logout"
                android:padding="5dp" />
        </TableRow>
    </TableLayout>



    <TextView
        android:id="@+id/account_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/account_credits"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        />


</androidx.constraintlayout.widget.ConstraintLayout>